[tool.poetry]
name = "pyl402"
version = "0.1.0"
description = "Python tools for the L402 protocol."
authors = ["Samuel Alarco <samuel.alarco@sulusolutions.com>"]
license = "MIT"
readme = "README.md"
source = [{ url = "https://github.com/sulusolutions/pyl402.git", name = "github" }]


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=pyl402 --cov-report=html --cov-report=term"
